# Cpp-Enterprise-APIs

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  rust-repomix-output.xml  rust.xml
.claude/: settings.local.json
cmake/: CircularEnterpriseAPIsConfig.cmake.in  CompilerFlags.cmake  FindDependencies.cmake
examples/: CMakeLists.txt  batch_certificates.cpp  certificate_with_metadata.cpp  certify_poem.cpp  error_handling_demo.cpp  simple_certificate_submission.cpp
include/circular/: ccertificate.hpp  cep_account.hpp  circular_enterprise_apis.hpp  env_loader.hpp  utils.hpp
src/: CMakeLists.txt  ccertificate.cpp  cep_account.cpp  env_loader.cpp  network.cpp  utils.cpp
tests/: CMakeLists.txt
tests/e2e/: test_e2e.cpp
tests/integration/: test_integration.cpp
tests/unit/: test_ccertificate.cpp  test_cep_account.cpp  test_utils.cpp
